@@ -917,14 +917,14 @@ public class WebAppContextTest
                 .filter(FileID::isJavaArchive)
                 .sorted(Comparator.naturalOrder())
                 .map(Path::toUri)
-                .filter(notInTempDirectory(context))
-                .map(URIUtil::toJarFileUri)
-                .toList();
+                .collect(Collectors.toList());
         }
+
         List<URI> actualURIs = Stream.of(webAppClassLoader.getURLs())
             .map(WebAppContextTest::toURI)
             .filter(notInTempDirectory(context))
             .toList();
+
         assertThat("[" + description + "] WebAppClassLoader.urls.length", actualURIs.size(), is(expectedUris.size()));
 
         assertThat(actualURIs, contains(expectedUris.toArray()));
